[package]
name = "bevy_botter"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["asset_processor", "file_watcher", "jpeg", "ktx2", "zstd"] }
iyes_perf_ui = "0.5.0"


[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

